include other phase of deployment, namely install SpookyStuff & ISpooky. Minor revision to make first section shorter